[project]
name = "360-to-planer-images"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "imageio==2.36.0",
    "numpy==2.1.3",
    "opencv-python==4.10.0.84",
    "pillow==11.0.0",
    "pyinstaller>=6.12.0",
    "scipy==1.14.1",
    "tqdm==4.67.0",
]
